--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -2,12 +2,12 @@
 <!-- EAO PROJECT TOMBSTONE -->
 <div class="panel panel-default project-tombstone" ng-if="environment === 'EAO'">
 	<div class="panel-heading flex-row">
-		<h2>Details</h2>
+		<h2>Project Details</h2>
 	</div>
 	<div class="panel-body">
 
 		<div class="detail-row project-desc" ng-show="project.description">
-			<label>Project Description</label>
+			<label>Description</label>
 			<span class="value">{{ ::project.description }}</span>
 		</div>
 
