--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -202,6 +202,14 @@ button.close {
 	font-weight: normal;
 }
 
+/* MIXINS */
+@mixin flexbox() {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
 @mixin flex($values) {
 	-webkit-box-flex: $values;
   	   -moz-box-flex: $values;
@@ -209,6 +217,12 @@ button.close {
   	    -webkit-flex: $values;
   	        -ms-flex: $values;
   		        flex: $values; 
+}
+
+@mixin flexdirection($values) {
+  -webkit-flex-direction: $values;
+  -ms-flex-direction: $values;
+  flex-direction: $values;
 }
 
 @mixin display-flex {
@@ -5333,50 +5347,43 @@ tmpl-template-render {
 	}
 }
 
-
 .project-timeline-container {
-	padding: 0.5rem;
-	@extend .flex-column;
+	padding: 1px;
 
 	.phase {
-		@include flex(1 1 0);
 		position: relative;
 		color: #888;
 		background: #EEE;
 
 		.phase-info {
-			@extend .flex-row;
+			position: relative;
 			height: 100%;
+			padding: 1rem;
 			border: 1px solid #FFF;
 
 			.phase-badge {
-				text-align: right;
+				margin-bottom: 1rem;
 
 				.label {
-					margin-bottom: 0.5rem;
-					min-width: 8rem;
-					padding: 0.3rem 0.8rem;
+					padding-top: 0.4rem;
+					padding-bottom: 0.3rem;
 				}
 
 				.label-info,
 				.label-success {
-					border: 1px solid #FFF;
+					border: 2px solid #FFF;
 				}
 
 				.label-default {
 					background: #bbb;
-					border: 1px solid #bbb;
+					border: 2px solid #bbb;
 				}
-			}
-
-			.phase-name,
-			.phase-status {
-				padding: 1rem;
 			}
 
 			.phase-name {
 				@include flex(1 1 auto);
-				margin: 0;
+				display: block;
+				margin-bottom: 1rem;
 				font-size: 1.6rem;
 				font-weight: bold;
 				line-height: 1.8rem;
@@ -5405,12 +5412,36 @@ tmpl-template-render {
 	}
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px)
+	and (max-device-width: 768px) {
 	.project-timeline-container {
-		flex-flow: row nowrap;
+		@include flexdirection(column);
 
 		.phase {
-			float: left;
+			.phase-info {
+				@include flexbox();
+				padding: 1rem 1.5rem;
+
+				.phase-name {
+					margin-top: 0.5rem;
+					margin-bottom: 0.5rem;
+				}
+			}
+		}
+
+		.phase-status {
+			text-align: right;
+		}
+	}
+}
+
+@media (min-width: 1024px) {
+	.project-timeline-container {
+		@include flexbox();
+
+		.phase {
+			-webkit-flex: 1 1 auto;
+			flex: 1 1 auto;
 			-ms-flex: 1 1 1px; /* IE needs a value for flex-basis or the flex grow/shrink properties won't obey */
 
 			.phase-info {
