--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -40,7 +40,7 @@
 							   'complete': o.completed}"
 					ng-repeat="o in project.phases">
 					<div class="phase-info">
-						<h4 class="phase-name">{{o.name}}</h4>
+						<span class="phase-name">{{o.name}}</span>
 						<div class="phase-status" ng-if="o.code != 'post-certification'">
 							<div class="phase-badge">
 								<span class="label"
@@ -89,14 +89,13 @@
 			</tmpl-project-initiated>
 		-->
 
-		<!-- EXPOSING FOR DEMO PURPOSES ONLY -->
-		<!-- ng-if="environment === 'EAO' && authentication.user" -->
+		<!-- IN PROGRESS CONTENT - removed RE: ESM-674 -->
+		<!-- 
 		<section class="project-artifacts" ng-if="environment === 'EAO' && authentication.user">
 			<div id="anchor-artifacts">
 				<tmpl-artifact-list x-project="project" x-published="false"></tmpl-artifact-list>
 			</div>
 		</section>
-
 		<section class="project-artifacts" ng-if="environment === 'EAO'">
 			<div id="anchor-artifacts-published">
 				<tmpl-artifact-list x-project="project" x-published="true"></tmpl-artifact-list>
@@ -105,7 +104,9 @@
 
 		<tmpl-public-comment-display class="anchor-section" id="anchor-publiccomments" x-project="project" ng-if="('project'| shouldDisplayPanel:'public-comments':project.status) && project.dateCommentsOpen && environment === 'EAO'">
 		</tmpl-public-comment-display>
+		-->
 
+		<!-- PUBLISHED CONTENT - removed RE: ESM-674 -->
 		<!--
 		<tmpl-project-activities
 			class="anchor-section"
@@ -115,94 +116,12 @@
 		</tmpl-project-activities>
 		-->
 
-		<!-- replaced this document browser with a nice shiny new documents manager.
-		 	Rumon Carter's request - remove from the details screen and only accessible from Documents menu.
-
-		<tmpl-documents-browser class="anchor-section" id="anchor-documents" x-project="project" x-approvals="false"></tmpl-documents-browser>
-		-->
-
 		<!-- PROJECT MAP -->
 		<section class="project-map">
 			<div class="panel panel-default no-margin">
-				<div class="panel-heading">
-					<h2>Project Map</h2>
-				</div>
 				<tmpl-map id="anchor-map" x-project="project"></tmpl-map>
 			</div>
 		</section>
 
 	</div>
-
-	<!-- ACTIVITIES LIST -->
-	<section class="right-panel activities-container hidden" ng-if="authentication.user">
-		<h2>My Activities<span>(*)</span></h2>
-		<div class="panel panel-default tab-container">
-			<ul class="nav nav-tabs" role="tablist">
-				<li class="todo" role="all-activities">
-					<a href="#active" aria-controls="active" role="tab" data-toggle="tab">Active (*)</a>
-				</li>
-				<li class="completed" role="all-activities">
-					<a href="#completed" aria-controls="completed" role="tab" data-toggle="tab">Complete (*)</a>
-				</li>
-				<li class="all active" role="all-activities">
-					<a href="#all" aria-controls="all" role="tab" data-toggle="tab">All (*)</a>
-				</li>
-			</ul>
-			<div class="tab-content">
-				<div class="tab-pane" id="active" role="tabpanel">
-					<ul class="activities-list">
-						<li>
-							<h3>Activity</h3>
-							<div class="activity-info">
-								<small>Start Date: <span>MM/DD/YYYY</span></small>
-								<small>End Date: <span>MM/DD/YYYY</span></small>
-							</div>
-							<span class="badge bg-primary">Active</span>
-						</li>
-					</ul>
-				</div>
-				<div class="tab-pane" id="completed" role="tabpanel">
-					<ul class="activities-list list-group">
-						<li>
-							<h3>Activity</h3>
-							<div class="activity-info">
-								<small>Start Date: <span>MM/DD/YYYY</span></small>
-								<small>End Date: <span>MM/DD/YYYY</span></small>
-							</div>
-							<span class="badge success">Complete</span>
-						</li>
-					</ul>
-				</div>
-				<div class="tab-pane active" id="all" role="tabpanel">
-					<ul class="activities-list list-group">
-						<li>
-							<h3>Activity</h3>
-							<div class="activity-info">
-								<small>Start Date: <span>MM/DD/YYYY</span></small>
-								<small>End Date: <span>MM/DD/YYYY</span></small>
-							</div>
-							<span class="badge bg-primary">To Do</span>
-						</li>
-						<li>
-							<h3>Activity</h3>
-							<div class="activity-info">
-								<small>Project: <span>Project Name</span></small>
-								<small>Start Date: <span>MM/DD/YYYY</span></small>
-								<small>End Date: <span>MM/DD/YYYY</span></small>
-							</div>
-							<span class="badge success">Complete</span>
-						</li>
-						<li>
-							<h3>Activity</h3>
-							<div class="activity-info">
-								<small>Project: <span>Project Name</span></small>
-								<small>Start Date: <span>MM/DD/YYYY</span></small>
-								<small>End Date: <span>MM/DD/YYYY</span></small>
-							</div>
-							<span class="badge success">Complete</span>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
 	</section>
