--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -213,12 +213,12 @@
 							</span>
 							<span class="fb-col-group"
 								ng-click="$event.originalEvent.dropdown || documentMgr.selectFile(doc)">
-								<span class="col name-col" title="{{ doc.documentFileName | removeExtension }}">
+								<span class="col name-col" title="{{ doc.displayName | removeExtension }}">
 									<span class="avatar">
 										<span class="fb-file glyphicon glyphicon-file" ng-if="doc.internalExt == 'pdf'"></span>
 										<span class="fb-img glyphicon glyphicon-picture" ng-if="doc.internalExt == 'png' && 'jpg' && 'jpeg'"></span>
 									</span>
-									{{ doc.documentFileName | removeExtension }}
+									{{ doc.displayName | removeExtension }}
 								</span>
 								<span class="col author-col" title="{{ doc.documentAuthor }}">
 									{{ doc.documentAuthor }}
@@ -258,7 +258,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to publish the selected file?'"
-														x-confirm-items="[doc.documentFileName]"
+														x-confirm-items="[doc.displayName]"
 														x-on-ok="documentMgr.publishFile"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-ok-circle"></span>
@@ -271,7 +271,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to unpublish the selected file?'"
-														x-confirm-items="[doc.documentFileName]"
+														x-confirm-items="[doc.displayName]"
 														x-on-ok="documentMgr.unpublishFile"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-ban-circle"></span>
@@ -284,7 +284,7 @@
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to delete this file? This action cannot be undone.'"
-														x-confirm-items="[doc.documentFileName]"
+														x-confirm-items="[doc.displayName]"
 														x-on-ok="documentMgr.deleteFile"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-trash"></span>
@@ -328,7 +328,7 @@
 					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h2 title="{{documentMgr.infoPanel.data.documentFileName | removeExtension}}">{{documentMgr.infoPanel.data.documentFileName | removeExtension }}</h2>
+					<h2 title="{{documentMgr.infoPanel.data.displayName | removeExtension}}">{{documentMgr.infoPanel.data.displayName | removeExtension }}</h2>
 					<!--
 					<h2>Fetching Details...</h2>
 					-->
