MEM-189 - Documents UI - Link Documents
- Deleted the 'spinner.scss file and moved to core modules (this is a global component)
- Added document-manager-link.html markup

- Fixed an issued with the document-manager-upload.html

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -5542,5 +5542,8 @@ tmpl-template-render {
 	}
 }
 
+/* COMPONENTS
+----------------------------- */
+@import "modules/core/client/styles/spinner.scss";
 @import "modules/documents/client/styles/file-browser.scss";
 @import "modules/documents/client/styles/pdf-viewer.scss";
