--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -31,7 +31,7 @@
 			<div class="fb-list">
 
 				<div class="column-header">
-					<div class="col name-col">
+					<div class="col name-col first-col">
 						<span>Name</span>
 					</div>
 					<div class="col file-size-progress-col">
