--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -565,6 +565,15 @@ span.avatar {
 
 .col.name-col {
     @include flex(1 1 auto);
+    position: relative;
+
+    .name {
+        position: absolute;
+        left: 4.5rem;
+        right: 0.5rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 .col.size-col{
