--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -7,53 +7,41 @@
 
     <div class="panel panel-default">
         <div class="pcp-alert clearfix">
-            <div class="pull-left">
-                <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
-                <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
-            </div>
-            <div class="pcp-comment-btn-container">
-                <button class="btn submit-comment-btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="period">
-                    Click Here to Submit a Comment
-                </button>
-            </div>
+            <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
+            <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
+            <button class="btn submit-comment-btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="period">
+                Click Here to Submit a Comment
+            </button>
         </div>
-
         <div class="pcp-details">
-            <!-- ABOUT -->
-            <section>
-                <h4>About this Comment Period...</h4>
-                <pre class="pcp-desc" ng-if="!period.instructions">No Description Available.</pre>
-                <pre class="pcp-desc" ng-if="period.instructions">{{ period.instructions }}</pre>
-                <!-- <pre class="pcp-desc" ng-if="isClosed">These are the closing remarks</pre> -->
-            </section><!-- / ABOUT -->
-            <!-- RELATED DOCUMENTS -->
-            <section class="pcp-related-docs">
-                <h4>Related Documents</h4>
-                <div class="list-group">
-                    <a class="list-group-item flex-row"
-                            ui-sref="p.artifact.view({artifactId:periodArtifact._id})"
-                            target="_blank" >
-                        <div class="icon">
-                            <span class="glyphicon glyphicon-list-alt"></span>
-                        </div>
-                        <div class="title">{{ artifact.name }}</div>
-                    </a>
-                </div>
-            </section><!-- / RELATED DOCUMENTS -->
-            <!-- OPEN HOUSE -->
-            <section ng-if="period.openHouses.length > 0">
+            <section class="pcp-about">
+                <h4 class="m-t-0">About this Comment Period...</h4>
+                <p ng-if="!period.instructions">No Description Available.</p>
+                <p ng-if="period.instructions">{{ period.instructions }}</p>
+            </section>
+            <section class="pcp-open-house" ng-if="period.openHouses.length > 0">
                 <h4>Open House Dates</h4>
-                <ul class="pcp-open-house-list">
-                    <li ng-repeat="h in period.openHouses">
-                        <strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong>
-                        <pre>{{ h.description }}</pre>
-                    </li>
-                </ul>
-            </section><!-- / OPEN HOUSE -->
+                    <ul>
+                        <li ng-repeat="h in period.openHouses">
+                            <strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong><span class="desc"> - {{ h.description }}</span>
+                        </li>
+                    </ul>
+            </section>
         </div>
-
     </div>
 
-    <tmpl-public-comment-list x-period="period" x-project="project"></tmpl-public-comment-list>
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation"><a href="#pcpDocuments" aria-controls="pcpDocuments" role="tab" data-toggle="tab">Related Documents</a></li>
+        <li class="active" role="presentation"><a href="#pcpComments" aria-controls="pcpComments" role="tab" data-toggle="tab">Comments</a></li>
+    </ul>
+
+    <div class="pcp-tab-content tab-content">
+        <div class="tab-pane" id="pcpDocuments">
+            <!-- Related Documents Here -->
+        </div>
+        <div class="tab-pane active" role="tab-panel" id="pcpComments">
+            <tmpl-public-comment-list x-period="period" x-project="project"></tmpl-public-comment-list>
+        </div>
+    </div>
 
 </div>
