--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -18,8 +18,8 @@
 					<td title="'Type'" filter="{'periodType':'select'}" filter-data="s.typeArray" sortable="'periodType'">
 						{{p.periodType}}
 					</td>
-					<td title="'Content'" filter="{ artifactName: 'select'}" filter-data="s.artifactArray" sortable="'artifactName'">
-						{{p.artifactName}}
+					<td title="'Documents'" sortable="'relatedDocuments.length'">
+						{{p.relatedDocuments.length}}
 					</td>
 					<td title="'Version'" filter="{ artifactVersion: 'select'}" filter-data="s.versionArray" sortable="'artifactVersion'">
 						{{p.artifactVersion}}
