--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -14,11 +14,6 @@
 <!-- Temporary fix until we move to angular modals -->
 <div class="temp-overlay"></div>
 
-<!--
-<div class="flex-title">
-
-</div>
--->
 <div class="clearfix">
 	<div class="pull-left">
 		<div ng-if="s.period.userCan.vetComments">
@@ -37,6 +32,7 @@
 				<li role="presentation"><a href role="tab" data-toggle="tab" ng-click="s.toggleP('Classified')">Assigned ({{s.totalAssigned}})</a></li>
 			</ul>
 		</div>
+		<span class="pcp-comment-count-label" ng-if="!s.period.userCan.classifyComments && !s.period.userCan.vetComments">Total Comments ( )</span>
 	</div>
 	<div class="actions pull-right">
 		<button class="btn btn-default btn-sm" ng-if="s.showTopicCloud === false"
