--- a/modules/core/client/styles/tabs.scss
+++ b/modules/core/client/styles/tabs.scss
@@ -28,6 +28,7 @@
                 > a {
                     color: #FFF;
                     background-color: #1a5a96;
+                    text-shadow: 0 0 1px #1a5a96;
 
                     &:focus {
                         background-color: #1a5a96;  
